syntax = "proto3";
package delivery_proto;

option go_package = "english-ai-full/internal/proto_qr/delivery";
import "google/protobuf/timestamp.proto";


message Delivery {
    int64 id = 1;
    int64 guest_id = 2;
    int64 user_id = 3;
    bool is_guest = 4;
    int64 table_number = 5;
    int64 order_handler_id = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 total_price = 10;
    repeated DishDeliveryItem dish_items = 11;
    int64 order_id = 12;
    int64 bow_chili = 13;
    int64 bow_no_chili = 14;
    bool take_away = 15;
    int64 chili_number = 16;
    string table_token = 17;
    string client_name = 18;
    string delivery_address = 19; // New field
    string delivery_contact = 20; // New field
    string delivery_notes = 21;   // New field
    google.protobuf.Timestamp scheduled_time = 22; // New field
    int32 delivery_fee = 23;      // New field

    string delivery_status = 25;  // New field
    google.protobuf.Timestamp estimated_delivery_time = 26; // New field
    google.protobuf.Timestamp actual_delivery_time = 27;    // New field
}

message CreateDeliverRequest {

    int64 guest_id = 2;
    int64 user_id = 3;
    bool is_guest = 4;
    int64 table_number = 5;
    int64 order_handler_id = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 total_price = 10;
    repeated DishDeliveryItem dish_items = 11;
    int64 order_id = 12;
    int64 bow_chili = 13;
    int64 bow_no_chili = 14;
    bool take_away = 15;
    int64 chili_number = 16;
    string table_token = 17;
    string client_name = 18;
    string delivery_address = 19; // New field
    string delivery_contact = 20; // New field
    string delivery_notes = 21;   // New field
    google.protobuf.Timestamp scheduled_time = 22; // New field
    int32 delivery_fee = 23;      // New field

    string delivery_status = 25;  // New field
    google.protobuf.Timestamp estimated_delivery_time = 26; // New field
    google.protobuf.Timestamp actual_delivery_time = 27;    // New field
}

message UpdateDeliverRequest {
    int64 id = 1;
    int64 guest_id = 2;
    int64 user_id = 3;
    bool is_guest = 4;
    int64 table_number = 5;
    int64 order_handler_id = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 total_price = 10;
    repeated DishDeliveryItem dish_items = 11;
    int64 order_id = 12;
    int64 bow_chili = 13;
    int64 bow_no_chili = 14;
    bool take_away = 15;
    int64 chili_number = 16;
    string table_token = 17;
    string client_name = 18;
    string delivery_address = 19; // New field
    string delivery_contact = 20; // New field
    string delivery_notes = 21;   // New field
    google.protobuf.Timestamp scheduled_time = 22; // New field
    int32 delivery_fee = 23;      // New field

    string delivery_status = 25;  // New field
    google.protobuf.Timestamp estimated_delivery_time = 26; // New field
    google.protobuf.Timestamp actual_delivery_time = 27;    // New field
}

message DishDeliveryItem {

    int64 quantity = 2;
    int64 dish_id = 3;
}

message DeliveryDetailedDish {
    int64 dish_id = 1;
    int64 quantity = 2;
    string name = 3;
    int32 price = 4;
    string description = 5;
    string image = 6;
    string status = 7;
}

message DeliveryDetailedResponse {
    int64 id = 1;
    int64 guest_id = 2;
    int64 user_id = 3;
    bool is_guest = 4;
    int64 table_number = 5;
    int64 order_handler_id = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 total_price = 10;
    repeated DeliveryDetailedDish dish_items = 11;
    int64 order_id = 12;
    int64 bow_chili = 13;
    int64 bow_no_chili = 14;
    bool take_away = 15;
    int64 chili_number = 16;
    string table_token = 17;
    string client_name = 18;
    string delivery_address = 19; // New field
    string delivery_contact = 20; // New field
    string delivery_notes = 21;   // New field
    google.protobuf.Timestamp scheduled_time = 22; // New field
    int32 delivery_fee = 23;      // New field

    string delivery_status = 25;  // New field
    google.protobuf.Timestamp estimated_delivery_time = 26; // New field
    google.protobuf.Timestamp actual_delivery_time = 27;    // New field
}

message DeliveryDetailedListResponse {
    repeated DeliveryDetailedResponse data = 1;
    PaginationInfo pagination = 2;
}

message PaginationInfo {
    int32 current_page = 1;
    int32 total_pages = 2;
    int64 total_items = 3;
    int32 page_size = 4;
}

message DeliverResponse {
    int64 id = 1;
    int64 guest_id = 2;
    int64 user_id = 3;
    bool is_guest = 4;
    int64 table_number = 5;
    int64 order_handler_id = 6;
    string status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    int32 total_price = 10;
    repeated DishDeliveryItem dish_items = 11;
    int64 order_id = 12;
    int64 bow_chili = 13;
    int64 bow_no_chili = 14;
    bool take_away = 15;
    int64 chili_number = 16;
    string table_token = 17;
    string client_name = 18;
    string delivery_address = 19; // New field
    string delivery_contact = 20; // New field
    string delivery_notes = 21;   // New field
    google.protobuf.Timestamp scheduled_time = 22; // New field
    int32 delivery_fee = 23;      // New field

    string delivery_status = 25;  // New field
    google.protobuf.Timestamp estimated_delivery_time = 26; // New field
    google.protobuf.Timestamp actual_delivery_time = 27;    // New field
}

message DeliveryIdParam {
    int64 id = 1;
}

message DeliveryClientNameParam {
    string name = 1;
}

message GetDeliveriesRequest {
    int32 page = 1;
    int32 page_size = 2;
}

service DeliveryService {
    rpc CreateOrder(CreateDeliverRequest) returns (DeliverResponse);
    rpc GetDeliveryDetailById(DeliveryIdParam) returns (DeliverResponse);
    rpc GetDeliveryDetailByClientName(DeliveryClientNameParam) returns (DeliveryDetailedListResponse);
    rpc UpdateDelivery(UpdateDeliverRequest) returns (DeliverResponse);
    rpc GetDeliveriesListDetail(GetDeliveriesRequest) returns (DeliveryDetailedListResponse);

    rpc DeleteDeliveryDetailById(DeliveryIdParam) returns (DeliveryIdParam);
}
